--- a/mental health.html
+++ b/mental health.html
@@ -46,7 +46,7 @@
 			<div class="caption" id="par1-caption">
  	 			<h2><i class="em em-books"></i>Get informed<i class="em em-mag"></i></h2><br><br>
  	 			<p class="lead">
-					Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
+					Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="link" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="link" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
 				</p>
 			</div>
 	  </div>
@@ -65,7 +65,7 @@
  	 		<div class="caption" id="par2-caption">
 				<h2><i class="em em-couple"></i>Talk to someone<i class="em em-phone"></i></h2>
   				<p class="lead">
-  				Telling people about your issues is a big relief. But if you're afraid  to speak to your friends, there are <mark class="second">confidential</mark> support services. Call the <a target="_blank" href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a target="_blank" href="http://www.samaritans.org/"><b>Samaritans</b></a class="text-danger"> round the clock. Another place to look for help is the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
+  				Telling people about your issues is a big relief. But if you're afraid  to speak to your friends, there are <mark class="second">confidential</mark> support services. Call the <a target="_blank" href="https://www.sheffieldnightline.co.uk/" class="link"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a target="_blank" href="http://www.samaritans.org/" class="link"><b>Samaritans</b></a class="text-danger"> round the clock. Another place to look for help is the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/chaplaincy" class="link"><b>Multi-faith Chaplaincy</b></a>.
   				</p>
  	 		</div>
  		</div>
