margins for text

--- a/mental health.html
+++ b/mental health.html
@@ -45,7 +45,7 @@
  	  	 	<img src="images/notebookPaper.png" class="img-responsive">
 			<div class="caption" id="par1-caption">
  	 			<h2><i class="em em-books"></i>Get informed<i class="em em-mag"></i></h2><br>
- 	 			<p class="lead">
+ 	 			<p class="lead text1">
 					Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="link" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="link" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
 				</p>
 			</div>
@@ -64,7 +64,7 @@
  	 		<img src="images/piles.png" class="img-responsive">
  	 		<div class="caption" id="par2-caption">
 				<h2><i class="em em-couple"></i>Talk to someone<i class="em em-phone"></i></h2>
-  				<p class="lead">
+  				<p class="lead text2">
   				Telling people about your issues is a big relief. But if you're afraid  to speak to your friends, there are <mark class="second">confidential</mark> support services. Call the <a target="_blank" href="https://www.sheffieldnightline.co.uk/" class="link"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a target="_blank" href="http://www.samaritans.org/" class="link"><b>Samaritans</b></a class="text-danger"> round the clock. Another place to look for help is the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/chaplaincy" class="link"><b>Multi-faith Chaplaincy</b></a>.
   				</p>
  	 		</div>
@@ -76,7 +76,7 @@
  	 		<img src="images/tape.png" class="img-responsive">
  	 			<div class="caption" id="par3-caption">
   					<h1>Professional support</h1>
-  					<p class="lead">
+  					<p class="lead text2">
   						Sometimes, problems  require professional assistance. There are <mark class="third">confidential</mark> services at Uni, such as the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/counselling class= "link"" class= "link"><b> Counselling Service</b></a> and the <a target="_blank" href-"http://www.sheffield.ac.uk/health" class= "link"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/disability" class= "link"><b>Disability and Dyslexia Support Service</b></a> can help.<i class="em em-speech_balloon"></i>
   					</p>
   				</div>
